--- a/.github/workflows/run_cv.yml
+++ b/.github/workflows/run_cv.yml
@@ -1,10 +1,11 @@
 name: Run Auto CV Script (Today)
 
 on:
-  # 24時間 10分おきに自動実行
-  schedule:
-    - cron: '*/10 * * * *'
-  # 手動実行も可能にする
+  # 自動実行（cron）を無効化するためにコメントアウトしました
+  # schedule:
+  #   - cron: '*/10 * * * *'
+  
+  # 手動実行のみ可能にする
   workflow_dispatch:
 
 jobs:
